# pr-downloader

./: .clang-format  .clang-format-ignore  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  VCPKG_NOTES.txt  docker-compose.yml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-rapidtools.yaml  cpp-format.yml
conf/: apache.conf  config.php  ssl.crt  ssl.key  upq.cfg  upq.conf
scripts/: rapid-init.sh  update-repos.py  update.sh
scripts/rapidtools-deb/: .gitignore  README.md  build-deb.sh  buildenv.Dockerfile
scripts/rapidtools-deb/pkg/debian/: changelog  control  rules
src/: BuildGit.cpp  CMakeLists.txt  Logger.cpp  Logger.h  Streamer.cpp  Tracer.cpp  Tracer.h  Util.cpp  Util.h  Version.cpp  Version.h  main.cpp  pr-downloader.cpp  pr-downloader.h
src/Downloader/: CurlWrapper.cpp  CurlWrapper.h  Download.cpp  Download.h  DownloadEnum.cpp  DownloadEnum.h  IDownloader.cpp  IDownloader.h
src/Downloader/Http/: DownloadData.cpp  DownloadData.h  ETag.cpp  ETag.h  HttpDownloader.cpp  HttpDownloader.h  IOThreadPool.cpp  IOThreadPool.h  Throttler.cpp  Throttler.h
src/Downloader/Rapid/: RapidDownloader.cpp  RapidDownloader.h  Repo.cpp  Repo.h  Sdp.cpp  Sdp.h
src/FileSystem/: File.cpp  File.h  FileData.h  FileSystem.cpp  FileSystem.h  HashGzip.cpp  HashGzip.h  HashMD5.cpp  HashMD5.h  HashSHA1.h  IArchive.h  IHash.cpp  IHash.h  SevenZipArchive.cpp  SevenZipArchive.h  ZipArchive.cpp  ZipArchive.h
src/lib/: CMakeLists.txt
src/lib/7z/: CMakeLists.txt
src/lib/base64/: CMakeLists.txt
src/lib/jsoncpp/: CMakeLists.txt
src/lib/minizip/: CMakeLists.txt
src/rapid/: Last.cpp  Marshal.cpp  PoolArchive.cpp
test/: CMakeLists.txt  functional_test.py  test.cpp
test/download/: .gitignore  Containerfile  README.md  default.conf  gen_repo.py
